--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,29 @@
 // Specific CSS for your home-page
+.wrapper {
+  width: 100vw;
+  height: 100vh;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  text-align: center;
+  // position: absolute;
+  // top: 0;
+  @media (min-width: 769px) {
+    width: 50vw;
+    margin: 0 auto;
+    background-position: 20% 45%;
+  }
+  &-content {
+    background-color: rgba(255,255,255,0.75);
+    padding: 1rem;
+    width: 100vw;
+    @media (min-width: 769px) {
+      width: 40vw;
+    }
+  }
+}
