--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="wrapper" style="background-image: url('<%= image_path "bg.jpg" %>')">
+  <div class="wrapper-content">
+    <p>Welcome to:</p>
+    <h1>Rent a Bench!</h1>
+    <p>Please login to checkout the best sposts!<br>
+    Are you new? Create an account!</p>
+    <div class="action">
+      <%= link_to 'Login', '#', class: 'btn' %>
+      <%= link_to 'Signup','#', class: 'btn-outline' %>
+    </div>
+  </div>
+</div>
+
+
