--- a/app/views/benches/index.html.erb
+++ b/app/views/benches/index.html.erb
@@ -1,13 +1,11 @@
-<h1> ALL THE BEST BENCHES FOR THE COMFORT OF YOUR BUTT </h1>
 <div class="container">
-	<%= link_to "Create a new bench!", new_bench_path %>
-</div>
-<div class="container">
-	<ul>
+<h1>All the best benches for the comfort of your butt</h1>
+	<ul class="list">
 		<% @benches.each do |bench| %>
 			<li>
-				<%= link_to bench.name, bench_path(bench)%>
+				<%= link_to bench.name.capitalize, bench_path(bench)%>
 			</li>
 		<% end %>
 	</ul>
+	<%= link_to "Create a new bench!", new_bench_path, class: 'btn-outline' %>
 </div>
