--- a/app/views/benches/new.html.erb
+++ b/app/views/benches/new.html.erb
@@ -1,3 +1,5 @@
-h3> Add a new bench </h3>
-<%= render'form', bench: @bench %>
-<%= link_to 'return', benches_path%>
+<div class="container">
+  <h3> Add a new bench </h3>
+  <%= render'form', bench: @bench %>
+  <%= link_to 'Return', benches_path, class: 'btn-outline' %>
+</div>
