--- a/app/assets/stylesheets/config/_layout.scss
+++ b/app/assets/stylesheets/config/_layout.scss
@@ -1,11 +1,12 @@
 .container {
   width: 100vw;
   padding: 2rem;
+  margin-top: 3.5rem;
   @media (min-width: 769px) {
     width: 70vw;
     max-width: 960px;
-    margin: 0 auto;
+    margin: 3.5rem auto 0 auto;
     background-color: $white;
-
+    // height: 70vh;
   }
 }
