--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,19 @@
 <div class="menu">
   <ul>
+    <% if user_signed_in? %>
     <li>
       <%= link_to 'Home', benches_path, class: "link" %>
         <%#= image_tag 'https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png' %>
       <%# end %>
     </li>
+    <% else %>
+    <li>
+      <%= link_to 'Home', root_path, class: "link" %>
+        <%#= image_tag 'https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png' %>
+      <%# end %>
+    </li>
+    <% end %>
+
     <% if user_signed_in? %>
       <li>
         <%= link_to "Benches", benches_path, class: 'link' %>
