--- a/app/assets/stylesheets/pages/_home.css
+++ b/app/assets/stylesheets/pages/_home.css
@@ -1,4 +1,3 @@
-// Specific CSS for your home-page
 .wrapper {
   width: 100vw;
   height: 100vh;
@@ -6,27 +5,32 @@
   background-size: cover;
   background-position: center;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 2rem;
   text-align: center;
   margin-top: 3.5rem;
-  // position: absolute;
-  // top: 0;
-  @media (min-width: 769px) {
+}
+
+@media (min-width: 769px) {
+  .wrapper {
     width: 50vw;
     margin: 3.5rem auto 0  auto;
     background-size: auto;
     background-repeat: no-repeat;
     background-position: top;
   }
-  &-content {
-    background-color: rgba(255,255,255,0.75);
-    padding: 1rem;
-    width: 100vw;
-    @media (min-width: 769px) {
-      width: 40vw;
-    }
+}
+
+.wrapper-content {
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 1rem;
+  width: 100vw;
+}
+
+@media (min-width: 769px) {
+  .wrapper-content {
+    width: 40vw;
   }
 }
