--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,5 @@
 	<%= simple_form_for [@bench, @booking] do |f| %>
+    <div class="form-short">
 		<%= f.error_notification %>
 
 
@@ -10,4 +11,5 @@
 		<div class="form-actions">
 			<%= f.button :submit %>
 		</div>
+  </div>
 	<% end %>
