--- a/app/views/benches/show.html.erb
+++ b/app/views/benches/show.html.erb
@@ -1,72 +1,25 @@
-<h1> Your buttbench </h1>
 <div class="container">
-	<h3> <%= @bench.name %>
-</div>
-
-<div class="container">
-	<ul>
-	</ul>
-</div>
-
-<%= link_to "Go back", benches_path %>
-
-<div class="container">
-  <h1><%= @cocktail.name %></h1>
-  <%= link_to "Back to all cocktails", root_path %>
+<h1> About this bench </h1>
   <br>
-  <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+  <%= image_tag "miradour.jpg", height: 300, width: 300 %>
 
 
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <h3>Recipe</h3>
-      <table class="table table-bordered">
-        <tbody>
-          <thead>
-            <th>Ingredient</th>
-            <th>Description</th>
-            <th>Action</th>
-          </thead>
-          <% @cocktail.doses.each do |dose| %>
-            <tr>
+<h3> <%= @bench.name.capitalize %> </h3>
+<p> bench address </p>
 
-              <td><%= dose.ingredient.name %></td>
-              <td><%= dose.description %></td>
-              <td>
-                <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
-                  <i class="fa fa-trash destroy_dose"></i>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+<ul>
+  <% @reviews.each do |review| %>
+    <li>
+        <%= review.rating %>
+        <%= review.description %>
+    </li>
+    <% end %>
+</ul>
+
     </div>
-    <div class="col-sm-12 col-md-6">
-      <%= render "doses/new", cocktail: @cocktail, dose: @dose %>
-    </div>
-  </div>
 
-  <h3>Reviews</h3>
-  <% if @cocktail.reviews.empty? %>
-    <p>Be the first to let a review</p>
-  <% else %>
-    <ul class="list-group">
-      <% @cocktail.reviews.each do |review| %>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <span class="badge badge-primary badge-pill">
-            <% counter = 0 %>
-            <% 5.times do %>
-              <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
-              <% counter += 1 %>
-            <% end %>
-          </span>
-          <%= review.content %>
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
-
-  <%= render "reviews/new", cocktail: @cocktail, review: @review %>
 
 </div>
+
+  <%= link_to "Back to all benches", root_path %>
+
