--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <div class="wrapper" style="background-image: url('<%= image_path "bg.jpg" %>')">
   <div class="wrapper-content">
+  <%= image_tag "logo.png" %>
+
     <p>Welcome to:</p>
     <h1>Rent a Bench!</h1>
     <% if user_signed_in? %>
