--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,7 @@
     <li>
       <%= link_to benches_path do%>
         <%= image_tag "bench.png" %>
+        <span class="link" id="desktop">Home</span>
       <% end %>
     </li>
     <% else %>
