--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,13 +20,23 @@
     background-size: auto;
     background-repeat: no-repeat;
     background-position: top;
+    padding: 3rem;
   }
+
   &-content {
     background-color: rgba(255,255,255,0.75);
     padding: 1rem;
     width: 100vw;
     @media (min-width: 769px) {
       width: 40vw;
+    }
+  }
+  & img {
+    height: 3rem;
+    margin-bottom: 1rem;
+    @media (min-width: 769px) {
+      height: 8rem;
+      margin: 1.5rem auto;
     }
   }
 }
