--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
-	<div class="form-short">
-		<h2> How does your butt feel? Write a review! </h2>
+	<div class="form form-short">
+		<h2> How does your butt feel? <br>Write a review! </h2>
 
 		<%= simple_form_for [@bench, @review] do |f| %>
 			<%= f.error_notification %>
   		<%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 			<%= f.input :rating, collection: 0..5 %>
 			<%= f.input :description%>
-			<%= f.submit %>
+			<%= f.submit class: 'btn'%>
 		<% end %>
 	</div>
 </div>
