--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,7 +9,7 @@
   padding: 0.75rem 1rem;
   transition: opacity 0.3s ease-out;
   // height: 2rem;
-  
+
   &:hover {
     color: $white;
     text-decoration: underline;
@@ -49,8 +49,8 @@
 
 
 .btn-small {
-  font-size: 0.75rem;
-  font-weight: 300;
+  font-size: 1rem;
+  font-weight: 600;
   text-decoration:none;
   color: $action;
   // border-radius: 50px;
@@ -60,7 +60,7 @@
   opacity: 0.8;
   transition: opacity 0.3s ease-out;
   // height: 1.5rem;
-  // margin-bottom: 1rem;
+  margin-bottom: 1rem;
   text-align: center;
   &:hover {
     color: $action;
