--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,8 +17,8 @@
 
     <% if user_signed_in? %>
       <li>
-        <%= link_to "Benches", benches_path, class: 'link' %>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'link' %>
+        <%= link_to "Benches", benches_path, class: 'link link-margin-left' %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'link link-margin-left' %>
       </li>
     <% else %>
       <li class="nav-item">
