--- a/app/views/benches/show.html.erb
+++ b/app/views/benches/show.html.erb
@@ -34,6 +34,6 @@
   <%= link_to 'review', new_bench_review_path(@bench), class: 'btn' %>
 <br>
 <br>
-<%= link_to "Back to all benches", root_path, class: "btn-small" %>
+<%= link_to "Back to all benches", benches_path, class: "btn-small" %>
 </div>
 
