--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,20 +4,25 @@
     <li>
       <%= link_to benches_path do%>
         <%= image_tag "bench.png" %>
-        <span class="link" id="desktop">Home</span>
+        <%# <span class="link" id="desktop">Home</span> %>
       <% end %>
     </li>
     <% else %>
     <li>
-       <%= link_to root_path do %>
+      <%= link_to root_path do%>
         <%= image_tag "bench.png" %>
+        <%# <span class="link" id="desktop">Home</span> %>
       <% end %>
     </li>
+
     <% end %>
 
     <% if user_signed_in? %>
       <li>
-        <%= link_to "Benches", benches_path, class: 'link link-margin-left' %>
+        <%#= link_to "Benches", benches_path, class: 'link link-margin-left' %>
+       <%= link_to dashboard_path do %>
+        <i class="fas fa-user"></i>
+      <% end %>
         <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'link link-margin-left' %>
       </li>
     <% else %>
