--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,15 +21,15 @@
     list-style: none;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin: 0;
     padding: 0;
   }
   @media (min-width: 769px) {
     background-color: $lightred;
-  border-bottom: 1px solid $action;
-
+    border-bottom: 1px solid $action;
+    justify-content: space-between;
   }
   & img {
     height: 1.5rem;
@@ -37,11 +37,15 @@
       text-decoration: none;
     }
   }
+  & i {
+    font-size: 1.5rem;
+  }
 }
 
 .link,
 .link:visited,
-.link:active {
+.link:active,
+i {
     color: $action;
     text-decoration: none;
     font-weight: 600;
