--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -51,7 +51,7 @@
                 <div class="padding">
                   
                         <p><strong>Bench: </strong>
-                        <%= link_to b.bench.name.capitalize, bench_path(b), class: 'btn-small' %></p>
+                        <%= link_to b.bench.name.capitalize, bench_path(b.bench), class: 'btn-small' %></p>
                         <p><strong>Checkin: </strong>
                         <%= b.starting_date %></p>
                         <p><strong>Checkout: </strong>
