--- a/app/views/benches/show.html.erb
+++ b/app/views/benches/show.html.erb
@@ -32,8 +32,15 @@
   <% end %>
   <br>
   <%= link_to 'review', new_bench_review_path(@bench), class: 'btn' %>
+  <% if @bench.user == current_user  %>
+  <%= link_to 'edit', edit_bench_path(@bench), class: 'btn' %>
+ <%= link_to "delete",
+              bench_path(@bench),
+              method: :delete,
+              data: { confirm: "Are you sure?" },
+              class: 'btn' %>
+  <% end %>
 <br>
 <br>
 <%= link_to "Back to all benches", benches_path, class: "btn-small" %>
 </div>
-
