add nav, review fix, map fix

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -27,7 +27,7 @@
                         <p><strong>Address: <br></strong>
                         <%= b.city %></p>
                     </div>
-                      <%= link_to '#', class: 'btn-small' do %>
+                      <%= link_to new_bench_review_path(b) , class: 'btn-small' do %>
                       <i class="fas fa-edit"></i>
                       <%end%>
                       
