--- a/app/views/benches/show.html.erb
+++ b/app/views/benches/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1> About this bench </h1>
+  <h1> About me </h1>
     <br>
     <%= image_tag "miradour.jpg", height: 300, width: 300 %>
   <br>
@@ -9,38 +9,48 @@
   <p> City: <%= @bench.city %> </p>
   <p> Rating: <%= @bench.score %> </p>
   <br>
-    <div class="action">
-    <%= link_to 'review', new_bench_review_path(@bench), class: 'btn' %>
-    <%= link_to 'book', new_bench_booking_path(@bench), class: 'btn-outline' %>
-    </div>
-  <h3>Reviews</h3>
+
+<h3 class="link card-link">Reviews >>></h3>
   <% if @bench.reviews.empty? %>
-    <p>Be the first to let a review</p>
+    <p>Sorry... this bench has not been reviewd yet.<br>
+    Be the first.</p>
 
   <% else %>
   
-    <ul class="list-group">
-    <div class="scroll">
-      <% @bench.reviews.each do |review| %>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <span class="badge badge-pill">
-            <% review.rating.to_i.times do %>
-              <%= image_tag "butt.png", height: 25, width: 25%>
-            <% end %>
-          </span>
-          <span><strong>
-          Author:
-          <%= review.user.first_name %>
-          <%= review.user.last_name %>
-          </span></strong>
-          <%= review.description %>
-        </li>
-      <% end %>
+  <div class="horizontal">
+    <div class="padding">
+
+        <div class="scroll">
+            <% @bench.reviews.each do |b|%>
+            <div class="booking">
+                <div class="padding">
+                    <div class="badge">
+                      <% b.rating.to_i.times do %>
+                      <%= image_tag "butt.png", id: 'butt'%>
+                      <% end %>
+                    </div>
+
+                        <p><strong>
+                        Author:
+                        <%= b.user.first_name %>
+                        <%= b.user.last_name %>
+                        </p></strong>
+                        <p><%= b.description %></p>
+                </div>
+            </div>
+          <%end%>
+        </div>
     </div>
-    </ul>
+  </div>
+
   <% end %>
 
 
+
+  <div class="action">
+    <%= link_to 'review', new_bench_review_path(@bench), class: 'btn' %>
+    <%= link_to 'book', new_bench_booking_path(@bench), class: 'btn-outline' %>
+  </div>
 <br>
 <br>
 <%= link_to "Back to all benches", benches_path, class: "btn-small" %>
