--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
     <% if user_signed_in? %>
       <li>
         <%#= link_to "Benches", benches_path, class: 'link link-margin-left' %>
-       <%= link_to 'map_path' do %>
+       <%= link_to map_path do %>
         <i class="fas fa-map-marked-alt"></i>
       <% end %>
       </li>
