--- a/app/views/benches/show.html.erb
+++ b/app/views/benches/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1> About me </h1>
+  <h1 class="small-title"> About me </h1>
     <br>
     <%= image_tag "miradour.jpg", height: 300, width: 300 %>
   <br>
