--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <h2>Bench: <span class="text-color"><%=@bench.name.capitalize%></span></h2>
-    <h2>Location: <span class="text-color"><%=@bench.location%></span></h2>
+    <h2 class="small-title">Bench: <span class="text-color"><%=@bench.name.capitalize%></span></h2>
+    <h2 class="small-title">Location: <span class="text-color"><%=@bench.location%></span></h2>
     <%= render 'form' %>
 </div>
