--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -30,7 +30,11 @@
     font-family: $headers-font;
     text-transform: uppercase;
     letter-spacing: 3px;
+    font-size: 1.2rem;
+    @media (min-width: 769px) {
     font-size: 1.5rem;
+
+    }
     &:hover {
       color: $action;
     }
