--- a/app/assets/stylesheets/pages/_map.scss
+++ b/app/assets/stylesheets/pages/_map.scss
@@ -13,10 +13,10 @@ canvas {
   height: 80vh;
 }
 .mapboxgl-popup {
-  max-width: 200px;
+  width: 60%;
+  padding: 0.75rem;
 }
 
 .mapboxgl-popup-content {
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
+  text-align: left;
 }
