--- a/app/views/shared/_info_window.html.erb
+++ b/app/views/shared/_info_window.html.erb
@@ -1,3 +1,3 @@
-<h2><%= bench.name %></h2>
-<p><%= bench.location %></p>
-<%= link_to bench.name.capitalize, bench_path(bench), class: 'link card-link'%>
+<p><strong>Bench: </strong><%= bench.name.capitalize %>
+<strong>Address: </strong><%= bench.location %></p>
+<%= link_to 'See more >', bench_path(bench), class: 'btn-small'%>
