--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,14 +24,16 @@
         <i class="fas fa-map-marked-alt"></i>
       <% end %>
       </li>
-      <li>
+      <li >
        <%= link_to dashboard_path do %>
         <i class="fas fa-user"></i>
       <% end %>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'link link-margin-left' %>
+      </li>
+      <li>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'link' %>
       </li>
     <% else %>
-      <li class="nav-item">
+      <li>
         <%= link_to "Login", new_user_session_path, class: 'link' %>
       </li>
     <% end %>
