--- a/app/views/benches/index.html.erb
+++ b/app/views/benches/index.html.erb
@@ -22,7 +22,12 @@
             <div class="card-text">
               <p><strong>Location: <br></strong>
               <%= bench.city %></p>
-              <p><strong>Rating: </strong><%= bench.score %></p>
+              <div class="butt">
+              <span><strong>Rating: </strong></span><br>
+                <% bench.score.to_i.times do %>
+                  <%= image_tag "butt.png"%>
+                <% end %>
+              </div>
             </div>
             <div class="action-icon">
               <%= link_to new_bench_booking_path(bench), class: 'btn-icon' do %>
