add custom marker

--- a/app/views/benches/index.html.erb
+++ b/app/views/benches/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h1 class="small-title">All the best benches for the comfort of your butt</h1>
+<h1 class="small-title">All the best benches for your best butt comfort</h1>
   <%= form_tag benches_path, class:"search", method: :get do %>
     <%= text_field_tag :query,
      params[:query],
