--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <%= stylesheet_pack_tag 'application' %>
     <%= favicon_link_tag asset_path 'logo.png' %>
+    <%= favicon_link_tag asset_path 'apple.png', rel: 'apple-touch-icon', type:'image/jpeg' %>
   </head>
 
   <body>
