--- a/app/views/benches/index.html.erb
+++ b/app/views/benches/index.html.erb
@@ -21,7 +21,7 @@
           <div class="card-content">
             <div class="card-text">
               <p><strong>Location: <br></strong>
-              <%= bench.city %></p>
+              <%= bench.location %></p>
               <div class="butt">
               <span><strong>Rating: </strong></span><br>
                 <% avg_rating(bench).times do %>
