--- a/app/views/benches/_form.html.erb
+++ b/app/views/benches/_form.html.erb
@@ -15,6 +15,7 @@
 			<%= f.input :name %>
 			<%= f.input :location %>
 			<%= f.input :city %>
+			<%= f.input :photo, as: :file %>
 		</div>
 
 		<div class="form-actions">
