--- a/app/views/benches/show.html.erb
+++ b/app/views/benches/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="small-title"> About me </h1>
     <br>
-    <%= image_tag "miradour.jpg", height: 300, width: 300 %>
+    <%= bench_image_tag(@bench)%>
   <br>
   <br>
   <h3> <%= @bench.name.capitalize %> </h3>
