--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,55 @@
   <body>
   <%= render 'shared/navbar' %>
     <%= yield %>
-    <footer>
+
+<!--     <footer>
       <h2 >- Rent a bench -</h2>
       <svg height="3" width="100">
         <line x1="0" y1="0" x2="100" y2="0"/>
       </svg>
       <p>Made by <span>Fabio, Alexandre & Susanna</span></p>
+    </footer> -->
+
+    <footer class="footer">
+     <div class="top-footer-container">
+      <div class="footer__top">
+        <div class="containerfooter">
+          <div class="footer__top--flex">
+            <div class="footer__top--img">
+              <br>
+              <img src="https://airbnb-susannapezzini.herokuapp.com/assets/bench-3186eeb19055bde90d7997b37fad44128dec30affed70575d0e1b896bae5604d.png" alt="Benches logo">
+              <br>
+              <h4 class="footer__headline">For the love of benches.</h4>
+              <div class="footer__top--nav">
+                <ul id="menu-footer">
+                  <li><a href="">Map</a></li>
+                  <li><a href="/places">Our Benches</a></li>
+                  <li><a href="">My Profile</a></li>
+                  <li><a href="">My Bookings</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+      <div class="footer__bottom">
+        <div class="containerfooter--sm">
+          <div>
+              <p>© 2021 Benches.</p>
+              <p>Coded by Fabio, Alex & Susanna.</p>
+          </div>
+          <div class="footer__bottom--nav">
+            <ul>
+              <li><a href="/privacy-policy/">Privacy Policy</a></li>
+              <li><a href="/terms">Terms & Conditions</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </footer>
+
+
     <%= render 'shared/flashes' %>
   </body>
 </html>
