--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -3,7 +3,7 @@
 
 
 // Define fonts for body and headers
-$body-font: "Roboto mono", "monospace";
+$body-font: "Roboto mono", "monospace", 'GT Pressura';
 $headers-font: "Nunito", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
